# coidb

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  MANIFEST.txt  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-package-conda.yml
src/coidb/: Snakefile  __main__.py  config.schema.yaml  config.yaml
src/coidb/scripts/: cluster_bold.py  common.py  extract_hmm_subseq.py  format_sintax.py  translate.py  trim_aln.py
tests/: config.cluster_100.yaml  config.cluster_95.yaml  config.filter_genes.yaml  config.filter_phyla.yaml  test_package.py
tests/clust_data/: bold_filtered.fasta
tests/data/: bold_taxa.txt
