[metadata]
name = coidb
version = 0.4.0
author = John Sundh
author_email = john.sundh@nbis.se
description = Workflow for downloading and formatting COI database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnne/coidb
project_urls =
    Bug Tracker = https://github.com/johnne/coidb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    snakemake
    biopython
    tqdm
    pandas
    seqkit
    importlib_resources

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    coidb = coidb.__main__:main