[metadata]
name = coidb
version = 0.4.8
author = John Sundh
author_email = john.sundh@nbis.se
description = Workflow for downloading and formatting COI database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/johnne/coidb
project_urls =
    Bug Tracker = https://github.com/johnne/coidb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
include_package_data = True
scripts =
    src/coidb/scripts/cluster_bold.py
    src/coidb/scripts/format_sintax.py
install_requires =
    snakemake
    biopython
    tqdm
    pandas
    importlib_resources

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    coidb = coidb.__main__:main
